# Personalized-Interactive-Comic-Tree-Dataset

./: .gitignore  README.md  pyproject.toml
assets/topic_roots/abandoned_space_elevator/: generation_metadata.json  root_asset.json  root_prompt.txt  synopsis.txt
assets/topic_roots/desert_whale_caravan/: generation_metadata.json  root_asset.json  root_prompt.txt  synopsis.txt
assets/topic_roots/hidden_castle/: generation_metadata.json  root_asset.json  root_prompt.txt  synopsis.txt
assets/topic_roots/miniature_city_inside_a_watch/: generation_metadata.json  root_asset.json  root_prompt.txt  synopsis.txt
assets/topic_roots/neon_hospital/: generation_metadata.json  root_asset.json  root_prompt.txt  synopsis.txt
assets/topic_roots/ocean_festival_on_paper_lantern_island/: generation_metadata.json  root_asset.json  root_prompt.txt  synopsis.txt
assets/topic_roots/rainy_cyberpunk_alley/: generation_metadata.json  root_asset.json  root_prompt.txt  synopsis.txt
assets/topic_roots/snow_mountain_radio_tower/: generation_metadata.json  root_asset.json  root_prompt.txt  synopsis.txt
assets/topic_roots/talking_animal_courtroom/: generation_metadata.json  root_asset.json  root_prompt.txt  synopsis.txt
assets/topic_roots/time_loop_train_station/: generation_metadata.json  (+3 more)
data/: user_profiles.jsonl
dataset_tools/: batch_generate_users.py  build_contrast_web.py  build_topic_root_assets.py  dataset_pipeline.py  prepare_user_topic_assets.py  run_end_to_end_dataset.py  select_and_normalize_profiles.py  verify_dataset_format.py
docs/: DATASET_CONSTRUCTION.md
(+8 files in other folders)
