[project]
name = "personalized-interactive-comic-tree-dataset"
version = "0.1.0"
description = "Dataset construction tools for personalized interactive comic tree generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.21.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
